consertando erro css

--- a/1html/.html
+++ b/1html/.html
@@ -10,7 +10,7 @@ body{background-color: rgb(142, 168, 192);}
 
 #exid{color: white; text-decoration: none; background-color: red;margin-left: 30px;}
 .exclass{color: white; text-decoration: none; background-color: blue; margin-left: 100px; }
-.listas{background-color: rgb(167, 197, 223);text-decoration: none; text-align: ; }
+.listas{background-color: rgb(167, 197, 223);text-decoration: none; }
     </style>
 </head>
 <body>
