--- a/1html/.html
+++ b/1html/.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minhas anotações</title>
     <style>
+        .spans{color: green;}
+        .divs{color: brown;}
 body{background-color: rgb(142, 168, 192);}
 
 #exid{color: white; text-decoration: none; background-color: red;margin-left: 30px;}
@@ -31,10 +33,21 @@ body{background-color: rgb(142, 168, 192);}
     <li><a href="#font">TAGS font</a></li>
    <li><a href="#padding">TAG padding | margin</a></li>
    <li><a href="#text">TAGS text</a></li>
-   
+   <li><a href="#line-height">TAG line</a></li>
+   <li><a href="#divi">TAGS div | span</a></li>
 </ul>
 
 
+- Temos as tags de conteiner e linha, respectivamente se chamam <strong id="divi">"div"</strong> e <strong>"span"</strong>, onde a tag "div" cria um conteiner separando os itens
+um em cima do outro, já o "span" separa dentro de uma linha atribuindo um valor apenas onde está a tag e seguindo normalmente a string após o fechamento da tag "span". 
+Segue o exemplo:
+
+
+<h1>Meu nome é Gusttavo<div class="divs"> Ruy</div> Nascimento Ferreira</h1>
+<h1>Meu nome é Gusttavo <span class="spans"> Ruy</span> Nascimento Ferreira</h1>
+
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 - A tag <strong id="style">"style"</strong> (utilizada no head) serve como um "documento de css" para fazer estilizar o html no próprio
  doc html (para melhor organização aconselho a separar as partes de javascript e css em outros arquivos)
@@ -62,6 +75,12 @@ já a tag <strong>"class"</strong> funciona para mais de uma tag. Segue o exempl
 - Temos as seguintes tags para estilo em css, <strong id="colors">"background-color"</strong> para mudar a cor do fundo da 
 string, da mesma forma a tag <strong>"color"</strong> também muda a cor mas dessa vez apenas a cor do texto.
 
+
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+- Temos a tag de espaçamento entre as linhas, chamada de <strong id="line-height">"line-height"</strong>
 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
